--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
                 <input type = "text" id="size_inp">
             </div>
             <button id="create">CREATE</button>
+            <div id="button_grp">
+                <button id="black">Black</button>
+                <button id="random">Random</button>
+                <button id="clear">Clear</button>
+            </div>
         </div>
         <div id = "page">
             
