--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div id="button_grp">
                 <button id="black">Black</button>
                 <button id="random">Random</button>
-                <button id="clear">Clear</button>
+                <button id="clear" class="cls-button">Clear</button>
             </div>
         </div>
         <div id = "page">
